# SimpleBenchmark

./: README.md  pyproject.toml  pyr.py  test.py
benchmark/: __init__.py  _internals.py  _repr_helper.py  abstract.py  api.py  builder.py  containers.py  errors.py  impl.py  implementation.py  mixin.py  typeshack.py
benchmark/helpers/: __init__.py  helper.py  repr_helper.py
simplebenchmark/: _helpers.py  _internals.py  abstract.py  containers.py  impl.py  mixin.py
